--- a/docs/talks/python-tidbits.ipynb
+++ b/docs/talks/python-tidbits.ipynb
@@ -23,7 +23,7 @@
     }
    },
    "source": [
-    "# Native Python Tricks\n"
+    "## Native Python Tricks\n"
    ]
   },
   {
@@ -34,7 +34,7 @@
     }
    },
    "source": [
-    "## f-strings"
+    "### f-strings"
    ]
   },
   {
@@ -147,7 +147,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## enumerate and zip"
+    "### enumerate and zip"
    ]
   },
   {
@@ -220,7 +220,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## list comprehensions\n"
+    "### list comprehensions\n"
    ]
   },
   {
@@ -309,7 +309,7 @@
     }
    },
    "source": [
-    "## sets"
+    "### sets"
    ]
   },
   {
@@ -390,7 +390,7 @@
     }
    },
    "source": [
-    "## getting help straight from Python (dir(), help(), locals())\n",
+    "### getting help straight from Python (dir(), help(), locals())\n",
     "\n",
     "\n"
    ]
@@ -453,7 +453,7 @@
     }
    },
    "source": [
-    "## advanced sorting using keys"
+    "### advanced sorting using keys"
    ]
   },
   {
@@ -520,7 +520,7 @@
     }
    },
    "source": [
-    "## filter and map\n",
+    "### filter and map\n",
     "*Filter and map aren't necessary to know - you can get away with for loops - but it's an alternative way of doing things that may be more readable/faster for your use case.*\n"
    ]
   },
@@ -612,27 +612,7 @@
     }
    },
    "source": [
-    "## Using Python to run bash commands\n",
-    "\n",
-    "..."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
-   "source": [
-    "# Python packages: Standard Library"
+    "## Python packages: Standard Library"
    ]
   },
   {
@@ -643,7 +623,7 @@
     }
    },
    "source": [
-    "## pprint\n"
+    "### pprint\n"
    ]
   },
   {
@@ -692,7 +672,7 @@
     }
    },
    "source": [
-    "## pathlib\n",
+    "### pathlib\n",
     "See [pathlib docs](https://docs.python.org/3/library/pathlib.html) for more info."
    ]
   },
@@ -774,7 +754,7 @@
     }
    },
    "source": [
-    "## datetime"
+    "### datetime"
    ]
   },
   {
@@ -820,7 +800,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## functools - tools to work with functions\n",
+    "### functools - tools to work with functions\n",
     "*Here we just cover `partial` and `cache`. See [docs](https://docs.python.org/3/library/functools.html) for more.*\n"
    ]
   },
@@ -837,7 +817,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### functools.partial\n",
+    "#### functools.partial\n",
     "- Simplifies repetitive function calls with fixed parameters (e.g., fitting curves, transformations).\n",
     "- Makes code cleaner and more reusable."
    ]
@@ -873,7 +853,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### functools.lru_cache\n",
+    "#### functools.lru_cache\n",
     "- Speeds up recursive or repetitive computations (e.g., dynamic programming, simulations)\n",
     "- Reduces redundant calculations in expensive functions\n",
     "- Should only be used on functions that are deterministic and idempotent (i.e., no side effects)"
@@ -971,7 +951,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### functools.reduce"
+    "#### functools.reduce"
    ]
   },
   {
@@ -1014,7 +994,7 @@
     }
    },
    "source": [
-    "## itertools - tools to work with iterators\n",
+    "### itertools - tools to work with iterators\n",
     "*See [docs](https://docs.python.org/3/library/itertools.html) for more.*\n",
     "\n",
     "What is an iterator?:\n",
@@ -1036,7 +1016,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### itertools.chain\n",
+    "#### itertools.chain\n",
     "Use chain to seamlessly combine multiple iterables into a single iterator."
    ]
   },
@@ -1057,7 +1037,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### itertools.product – Cartesian Product\n",
+    "#### itertools.product – Cartesian Product\n",
     "Generate all possible combinations (Cartesian product) of input iterables."
    ]
   },
@@ -1078,7 +1058,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### itertools.combinations – Generate Combinations\n",
+    "#### itertools.combinations – Generate Combinations\n",
     "Generate all possible combinations of a specific length from an iterable."
    ]
   },
@@ -1098,7 +1078,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## itertools.permutations - Generate Permutations\n",
+    "#### itertools.permutations - Generate Permutations\n",
     "Generate all possible permutations of an iterable."
    ]
   },
@@ -1118,7 +1098,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### itertools.islice – Slice Iterators\n",
+    "#### itertools.islice – Slice Iterators\n",
     "Slice an iterator without converting it to a list first."
    ]
   },
@@ -1138,7 +1118,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### itertools.groupby – Group Data"
+    "#### itertools.groupby – Group Data"
    ]
   },
   {
@@ -1158,7 +1138,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### itertools.cycle – Infinite Cycling\n",
+    "#### itertools.cycle – Infinite Cycling\n",
     "Cycle through an iterable indefinitely."
    ]
   },
@@ -1181,7 +1161,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### itertools.tee – Duplicate an Iterator\n",
+    "#### itertools.tee – Duplicate an Iterator\n",
     "Split an iterator into multiple independent iterators."
    ]
   },
@@ -1204,7 +1184,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### more itertools"
+    "#### more itertools"
    ]
   },
   {
@@ -1220,7 +1200,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Python packages: 3rd Party\n"
+    "## Python packages: 3rd Party\n"
    ]
   },
   {
@@ -1231,7 +1211,7 @@
     }
    },
    "source": [
-    "## tqdm\n",
+    "### tqdm\n",
     "\n",
     "After installing it using `conda install tqdm` or `pip install tqdm`..."
    ]
@@ -1268,7 +1248,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Topics not discussed, and further reading\n",
+    "## Topics not discussed, and further reading\n",
     "\n",
     "Things not mentioned in this talk:\n",
     "- Testing (using Pytest)\n",
