copy edit and intro

--- a/docs/talks/python-tidbits.ipynb
+++ b/docs/talks/python-tidbits.ipynb
@@ -9,7 +9,11 @@
    },
    "source": [
     "# Python Tidbits: Small Python tips, tricks, and packages you wish you knew about yesterday\n",
-    "> by Nick Hodgskin"
+    "> by Nick Hodgskin\n",
+    "\n",
+    "This talk will mainly be code examples so that we can learn about these Python features by doing. I am using Python 3.12, but these features work in Python 3.6 and above.\n",
+    "\n",
+    "Let's get started! We have many examples to go through."
    ]
   },
   {
@@ -141,6 +145,7 @@
     "You can find out more about formatting options at [W3Schools: Python String Formatting](https://www.w3schools.com/python/python_string_formatting.asp).\n",
     "\n",
     "Quick reference of format specified (mentioned in the article):\n",
+    "\n",
     "```\n",
     ":<\t\tLeft aligns the result (within the available space)\n",
     ":>\t\tRight aligns the result (within the available space)\n",
@@ -166,7 +171,6 @@
     ":n\t\tNumber format\n",
     ":%\t\tPercentage format\n",
     "```\n",
-    "\n",
     "\n"
    ]
   },
@@ -424,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
@@ -461,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -505,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -1271,7 +1275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
